# eos-name-converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: application.hpp  name.hpp
src/: CMakeLists.txt  application.cpp  name.cpp
test/: CMakeLists.txt  application_test.cpp  name_test.cpp
